Fix openapi.json
